--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -6,11 +6,11 @@
 
 ## A (very) short introduction to `{shiny}`
 
-If you are reading this page, chances are you already know what a `{shiny}` application (sometimes shortened as "`{shiny}` app") is---**a web application that communicates with R, built in R, and working with R**.
+If you are reading this page, chances are you already know what a `{shiny}` application (sometimes shortened as "`{shiny}` app") is—**a web application that communicates with R, built in R, and working with R**.
 The beauty of `{shiny}` [@R-shiny] is that it makes it easy for someone already familiar with R to create a small app in a matter of hours.
-With small and minimal `{shiny}` apps, no knowledge of HTML, CSS or JavaScript is required, and you do not have to think about technical elements that usually come with web applications---for example, you do not have to think about the port the application is served on: `{shiny}` picks one for you [^big-shiny-1] .
+With small and minimal `{shiny}` apps, no knowledge of HTML, CSS or JavaScript is required, and you do not have to think about technical elements that usually come with web applications—for example, you do not have to think about the port the application is served on: `{shiny}` picks one for you [^big-shiny-1] .
 Same goes for serving external dependencies: the application comes with its set of CSS and JavaScript dependencies that a common `{shiny}` developer does not need to worry about.
-And that is probably one of the main reasons why this package has become so successful over the years---**with very little training, you can rapidly create a proof-of-concept (PoC) for a data product, showcase an algorithm, or present your results in an elegant and accessible user interfaces**.
+And that is probably one of the main reasons why this package has become so successful over the years—**with very little training, you can rapidly create a proof-of-concept (PoC) for a data product, showcase an algorithm, or present your results in an elegant and accessible user interfaces**.
 
 [^big-shiny-1]: Of course you can specify one if you need to, but by default the package picks one.
 
