--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -104,11 +104,11 @@ This process will build the `man/` files and fill the `NAMESPACE`, by scanning t
 
 If you want to learn more about these files, here are some resources you can refer to:
 
--   [Writing R Extensions---The DESCRIPTION file](https://cran.r-project.org/doc/manuals/r-release/R-exts.html#The-DESCRIPTION-file)
--   [Writing R Extensions---Package namespaces](https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Package-namespaces)
--   [R Packages---Package metadata](https://r-pkgs.org/description.html#)
--   [R Packages---Namespace](https://r-pkgs.org/namespace.html)
--   [Building a package that lasts---eRum 2018 workshop](https://speakerdeck.com/colinfay/building-a-package-that-lasts-erum-2018-workshop)
+-   [Writing R Extensions—The DESCRIPTION file](https://cran.r-project.org/doc/manuals/r-release/R-exts.html#The-DESCRIPTION-file)
+-   [Writing R Extensions—Package namespaces](https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Package-namespaces)
+-   [R Packages—Package metadata](https://r-pkgs.org/description.html#)
+-   [R Packages—Namespace](https://r-pkgs.org/namespace.html)
+-   [Building a package that lasts—eRum 2018 workshop](https://speakerdeck.com/colinfay/building-a-package-that-lasts-erum-2018-workshop)
 
 ### R/
 
@@ -531,4 +531,4 @@ Building documentation for a package is a widely documented subject, and if you 
 
 -   [R Packages - Object documentation](http://r-pkgs.had.co.nz/man.html)
 -   [Introduction to roxygen2](https://cran.r-project.org/web/packages/roxygen2/vignettes/roxygen2.html)
--   [Building a package that lasts---eRum 2018 workshop](https://speakerdeck.com/colinfay/building-a-package-that-lasts-erum-2018-workshop)
+-   [Building a package that lasts—eRum 2018 workshop](https://speakerdeck.com/colinfay/building-a-package-that-lasts-erum-2018-workshop)
