--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -4,7 +4,7 @@
 
 Let's state the truth: no matter how complex and innovative your back-end is, your application is bad if your user experience (UX) is bad.
 That's the hard truth. 
-We have a natural tendency, as R-coders, to be focused on the back-end, i.e. the server part of the application, which is perfectly normal---chances are you did not come to R to design front-ends [^ux-matters-2].
+We have a natural tendency, as R-coders, to be focused on the back-end, i.e. the server part of the application, which is perfectly normal—chances are you did not come to R to design front-ends [^ux-matters-2].
 
 [^ux-matters-2]: The front-end is the visual part of your application - the one your user interacts with - as opposed to the back-end, which is what is installed on the server, the part the end user does not see.
     In `{shiny}`, front-end corresponds to the UI, while back-end, to the server.
@@ -226,7 +226,7 @@ When we are browsing the web, **we have a series of pre-conceptions about what t
 For example, we expect an underline text to be clickable, so there is a good chance that if you use underlined text in your app, the user will try to click on it.
 Usually, the link is also colored differently from the rest of the text.
 The same goes for the pointer of the mouse, which usually switches from an arrow to a small hand with a finger up.
-A lot of other conventions exist on the web, and you should endeavor to follow them: a clickable link should have at least one of the properties we just described---and if it is neither underlined nor colored and does not change the pointer when it is hovered, chances are that the user will not click on it.
+A lot of other conventions exist on the web, and you should endeavor to follow them: a clickable link should have at least one of the properties we just described—and if it is neither underlined nor colored and does not change the pointer when it is hovered, chances are that the user will not click on it.
 
 Just imagine for a second if our "Download" button in the `{tidytuesday201942}` app did not actually download the graph you had generated.
 Even more, imagine if this button did not download the graph but something else.
@@ -287,7 +287,7 @@ Indeed, you can be sure that if step 2 relies on step 1 and you did not hide ste
 Another way to help this readability is to ensure some kind of linear logic through the app: step 1, data upload, step 2, data cleaning, step 3, data visualization, step 4, exporting the report.
 And organized your application around this logic, from left to right / right to left, or from top to bottom.
 
-Let's compare `{tidytuesday201942}` to `{hexmake}`---one has a clear progression, `{hexmake}`, and has been designed as such: the upper menus design the stickers, and then once they are filled you can download them.
+Let's compare `{tidytuesday201942}` to `{hexmake}`—one has a clear progression, `{hexmake}`, and has been designed as such: the upper menus design the stickers, and then once they are filled you can download them.
 There is a progression here, from top to bottom.
 On the other hand, `{tidytuesday201942}` does not have a real progression inside it: you can navigate from one tab to the other at will.
 Hence there are no visual clues of progression on that app.
@@ -400,7 +400,7 @@ It is also possible to build your own with a little bit of HTML, CSS and JavaScr
 ### What is feature-creep?
 
 > Even more often (at least in the commercial software world) excessive complexity comes from project requirements that are based on the marketing fad of the month rather than the reality of what customers want or software can actually deliver.
-> Many a good design has been smothered under marketing's pile of "checklist features"---features that, often, no customer will ever use.
+> Many a good design has been smothered under marketing's pile of "checklist features"—features that, often, no customer will ever use.
 > And a vicious circle operates; the competition thinks it has to compete with chrome by adding more chrome.
 > Pretty soon, massive bloat is the industry standard and everyone is using huge, buggy programs not even their developers can love.
 > 
