--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -4,7 +4,7 @@
 
 > You have to believe that software design is a craft worth all the intelligence, creativity, and passion you can muster.
 > Otherwise you will not look past the easy, stereotyped ways of approaching design and implementation; **you will rush into coding when you should be thinking**.
-> You'll carelessly complicate when you should be relentlessly simplifying---and you'll wonder why your code bloats and debugging is so hard.\
+> You'll carelessly complicate when you should be relentlessly simplifying—and you'll wonder why your code bloats and debugging is so hard.\
 > 
 > _The Art of UNIX Programming_ [@ericraymond2003] (Our bold.)
 
@@ -172,7 +172,7 @@ Take some time with the developer(s) that built the current app, so that you can
 Write documentation for this package, work on testing, and once you are done, call it a day: you now have solid ground for building the back-end, and it is built outside of any reactivity, is not linked to any application, and most of the time it can be used outside of the app.
 It might actually be more useful than you think: it can serve analysts and data scientists that will benefit from these functions outside of the application, as they can use the business logic functions that are now packaged, and so reusable.
 
-Existing `{shiny}` projects, in most cases, have not been built by software engineers or web developers---they have been built by data analysts/scientists who wanted to create an interactive PoC for their work.
+Existing `{shiny}` projects, in most cases, have not been built by software engineers or web developers—they have been built by data analysts/scientists who wanted to create an interactive PoC for their work.
 The good news, then, is that you can expect the core algorithms to be pretty solid and innovative.
 But web development is not their strength: and that is perfectly normal, as it is not their core job.
 What that implies is that most `{shiny}` PoCs take shortcuts and rely on hacks, especially when it comes to managing reactivity, which is a beautiful concept for small projects but can be very complex to scale if you are not a software engineer by training; even more, given that R is by nature sequential.
