--- a/11-step-by-step-secure.Rmd
+++ b/11-step-by-step-secure.Rmd
@@ -385,7 +385,7 @@ fs::dir_tree("shinylogs", recurse = FALSE)
 fs::dir_tree("shinylogs", recurse = FALSE, regexp  = "csv$", invert = TRUE)
 ```
 
-Good news: we do not have to manually analyze these files---`{shinyloadtest}` offers a series of wrapper functions to do that.
+Good news: we do not have to manually analyze these files—`{shinyloadtest}` offers a series of wrapper functions to do that.
 
 ```{r 11-step-by-step-secure-19, message = FALSE, warning = FALSE}
 # Bringing the runs in the R session
@@ -772,7 +772,7 @@ Once your app is built, there are few chances that you will launch it on your ow
 You will either give your users a package (which will be the simplest way to share it: bundle the packaged app to a `tar.gz`, then let people install it either manually or from a package repository), or a URL where they can connect and use your app.
 
 If you follow the `{golem}` workflow and all the good practices for a solid package, the application you have built should be deployable on another computer that has R.
-In that second case, **you will have to think about how you can create your app in a reproducible environment**: in other words, be sure that the app is deployed under the same configuration as your local application---R version, package versions, system requirements, environment variables, etc.
+In that second case, **you will have to think about how you can create your app in a reproducible environment**: in other words, be sure that the app is deployed under the same configuration as your local application—R version, package versions, system requirements, environment variables, etc.
 
 To help you achieve that, we will introduce two tools in the next section: `{renv}` [@R-renv] and [Docker](https://www.docker.com/).
 
