--- a/12-secure.Rmd
+++ b/12-secure.Rmd
@@ -220,7 +220,7 @@ Note that Travis CI can run tests on GNU/Linux or MacOS operating systems.
 It supports Windows, Linux and macOS.
 
 [GitHub actions](https://github.com/features/actions) serve a related purpose: defining actions to be performed as responses to events on the GitHub repository.
-Testing, building documentation, push to another repository, deploy on the server---all these actions can be automatically performed.
+Testing, building documentation, push to another repository, deploy on the server—all these actions can be automatically performed.
 As with Travis CI, these actions are defined in a `yaml` file.
 Examples of these configurations can be found at [r-lib/actions](https://github.com/r-lib/actions), and some can be automatically linked to your project using functions from `{usethis}`: `use_github_action_check_release()`, `use_github_action_check_standard()`, `use_github_action_check_full()` and `use_github_action_pr_commands()`.
 The first three perform a standard `R CMD check`, under various conditions:
