--- a/14-when_optimize.Rmd
+++ b/14-when_optimize.Rmd
@@ -84,7 +84,7 @@ Again, **optimization is always a matter of trade-off**: is the half-second loca
 Also, are the extra hours/days spent rewriting a working code-base worth the speed gain of 0.5 seconds on one function?
 
 For example, let's compare both these implementations of the same function, one in R, and one in C++ via `{Rcpp}` [@R-Rcpp].
-Of course, the C++ function is faster than the R one---this is the very reason for using C++ with R.
+Of course, the C++ function is faster than the R one—this is the very reason for using C++ with R.
 
 ```{r 14-when-optimize-2 }
 library("Rcpp")
