--- a/16-optimizing-shiny-code.Rmd
+++ b/16-optimizing-shiny-code.Rmd
@@ -41,7 +41,7 @@ For example, if you have a graph which is taking 2 seconds to render (which is q
 In that case, it does make sense to cache the result: if you call `ploting_function(input$selection)` twice with the same value for `input$selection`, and you are sure that this plot will be the same every time, you can cache it.
 In other words, instead of recomputing the graph on each `input$selection` change, you can cache the plot the first time it is generated, and then the application will read the cache instead of re-doing the computation.
 
-Same goes for queries to a database: if a query is done with the same parameters, and you know that they will return the same result, there is no need to ask the database again and again---ask the cache to retrieve the data.
+Same goes for queries to a database: if a query is done with the same parameters, and you know that they will return the same result, there is no need to ask the database again and again—ask the cache to retrieve the data.
 
 Keep in mind that this caching mechanism is only to be used when **the data don't change**.
 For example, if you are calling a database which is updated on a regular basis, you might not want to cache the results of a function.
@@ -273,7 +273,7 @@ Since version `1.6.0`, `{shiny}` [@R-shiny] has two caching functions: `renderCa
 (note that `renderCachedPlot()` is in `{shiny}` since version `1.2.0`).
 
 `renderCachedPlot()` behaves more or less like the `renderPlot()` function, except that it is tailored for caching.
-The extra arguments you will find are `cacheKeyExpr` and `sizePolicy`: the former is the list of inputs and values that allow you to cache the plot---every time these values and inputs are the same, they produce the same graph, so `{shiny}` will be fetching inside the cache instead of computing the value another time.
+The extra arguments you will find are `cacheKeyExpr` and `sizePolicy`: the former is the list of inputs and values that allow you to cache the plot—every time these values and inputs are the same, they produce the same graph, so `{shiny}` will be fetching inside the cache instead of computing the value another time.
 `sizePolicy` is a function that returns a `width` and a `height`, which are used to round the plot dimension in pixels, so that not every pixel combination is generated in the cache.
 
 The good news is that converting existing `renderPlot()` functions to `renderCachedPlot()` is pretty straightforward in most cases: take your current `renderPlot()`, and add the cache keys [^optimizing-shiny-code-3] .
